@@ -1,3 +1,7 @@
+2009-07-24  Marcus Meissner  <marcus@jet.franken.de>
+
+	* config.c: Finalized generic PTP property setter.
+
 2009-07-19  Marcus Meissner  <marcus@jet.franken.de>
 
 	* config.c: New subsection "status" for all read-only values.
